[gd_scene load_steps=8 format=2]

[ext_resource path="res://Effects/Shaders/outline_shader.shader" type="Shader" id=1]
[ext_resource path="res://Structures/RaftAnchor/raft_post.png" type="Texture" id=2]
[ext_resource path="res://Structures/RaftAnchor/RaftAnchor.gd" type="Script" id=3]


[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 1 )
shader_param/Smooth = false
shader_param/line_thickness = 0.0
shader_param/outline_color = Color( 1, 1, 1, 1 )
shader_param/pixel_size = 1

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 1 )
shader_param/Smooth = false
shader_param/line_thickness = 0.0
shader_param/outline_color = Color( 1, 1, 1, 1 )
shader_param/pixel_size = 1

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.0
height = 2.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 9 )

[node name="RaftAnchor" type="StaticBody2D"]
material = SubResource( 3 )
collision_mask = 0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 4 )
position = Vector2( 0, -6 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2( 0, -7 )
shape = SubResource( 2 )
[connection signal="input_event" from="InteractArea" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="InteractArea" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="InteractArea" to="." method="_on_Area2D_mouse_exited"]
